mobile overflow fixed

--- a/hw-4-covid-19-landing-page/scss/style.scss
+++ b/hw-4-covid-19-landing-page/scss/style.scss
@@ -197,6 +197,7 @@ body{
         background: #FFFFFF;
         box-shadow: 0px 5px 80px rgba(0, 0, 0, 0.08);
         border-radius: 10px;
+        max-width: 100%;
     }
 
     &__card:not(:last-child){
@@ -207,6 +208,10 @@ body{
 .symptomps{
     margin-top: 200px;
     text-align: center;
+
+    &__image{
+        max-width: 100%;
+    }
 }
 
 .precautions{
@@ -352,8 +357,8 @@ body{
         }
 
         &__card-content{
-            margin-left: 100px;
-            margin-right: 100px;
+            margin-left: 50px;
+            margin-right: 50px;
         }
     }
 
